samples/_failures_safe/1761796310_8ef67b_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_325e0796.c: In function ‘main’:
./samples/SAFE/__tmp_325e0796.c:157:10: error: ‘Matrix’ has no member named ‘col’; did you mean ‘cols’?
  157 |     mat1.col
      |          ^~~
      |          cols
./samples/SAFE/__tmp_325e0796.c:157:13: error: expected ‘;’ at end of input
  157 |     mat1.col
      |             ^
      |             ;
./samples/SAFE/__tmp_325e0796.c:157:5: error: expected declaration or statement at end of input
  157 |     mat1.col
      |     ^~~~
